# clip2_Unnamed10110

./: .gitignore  CMakeLists.txt  ClipboardManager.cpp  ClipboardManager.h  ClipboardManager.rc  README.md  app.manifest  build.bat  commit_cpp.txt
